--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,12 @@
 {
     "java.project.sourcePaths": [
-        "src",
-        "test"
+        "test",
+        "src"
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\Users\\olivi\\Downloads\\junit-4.13.2.jar",
         "c:\\Users\\olivi\\Downloads\\json-20220320.jar",
+        "c:\\Users\\olivi\\Downloads\\junit-4.13.2.jar",
         "c:\\Users\\olivi\\Downloads\\hamcrest-core-1.3.jar"
     ]
 }
